# rootly-mcp-server

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  dependency-review.yml  openapi-audit.yml  pypi-release.yml
examples/skills/: README.md
scripts/: setup-hooks.sh
src/rootly_mcp_server/: __main__.py  code_mode.py  server.py  server_defaults.py  spec_transform.py  transport.py  utils.py
src/rootly_mcp_server/data/: swagger.json
src/rootly_mcp_server/tools/: alerts.py  incidents.py  oncall.py  resources.py
tests/integration/local/: test_tool_allowlists.py
tests/integration/remote/: test_essential.py
tests/unit/: test_alert_stripping.py  test_alert_tools.py  test_code_mode_module.py  test_main_transport.py  test_oncall_handoff.py  test_server.py  test_server_defaults_module.py  test_snakecase_tools.py  test_tools.py  test_transport_module.py
