[project]
name = "rootly-mcp-server"
version = "2.3.5"
description = "Secure Model Context Protocol server for Rootly APIs with AI SRE capabilities, comprehensive error handling, and input validation"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Rootly AI Labs", email = "support@rootly.com" }]
keywords = [
    "rootly",
    "mcp",
    "llm",
    "ai-sre",
    "automation",
    "incidents",
    "incident-management",
    "on-call",
    "security",
    "rate-limiting",
    "sre",
    "devops",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "fastmcp[code-mode]==3.2.0",  # Pin to patched version with Code Mode support
    "authlib>=1.6.11",  # Override vulnerable transitive authlib (GHSA-jj8c-mmj3-mmgv)
    "python-dotenv>=1.2.2",  # Override vulnerable transitive python-dotenv (GHSA-m8f7-34r5-grfg)
    "python-multipart>=0.0.26",  # Override vulnerable transitive python-multipart (CVE-2026-40347)
    "cryptography>=46.0.7",  # Override vulnerable transitive cryptography
    "Pygments>=2.20.0",  # Override vulnerable transitive Pygments
    "requests==2.33.1", # Pin to patched version
    "httpx==0.28.1",   # Pin to specific version
    "pydantic==2.12.5",  # Pin to specific version
    "brotli>=1.2.0",    # For Brotli compression support in httpx
    "scikit-learn>=1.3.0", # For text similarity and ML utilities
    "numpy>=1.24.0",    # For numerical operations
]

[project.urls]
Homepage = "https://github.com/Rootly-AI-Labs/Rootly-MCP-server"
Issues = "https://github.com/Rootly-AI-Labs/Rootly-MCP-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rootly_mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.include]
"src/rootly_mcp_server/data" = "rootly_mcp_server/data"

[project.scripts]
rootly-mcp-server = "rootly_mcp_server.__main__:main"

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.32.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.404",
    "ruff>=0.7.3",
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0", # Coverage reporting
    "pytest-asyncio>=0.23.0", # Async testing support
    "pytest-mock>=3.12.0", # Mocking utilities
    "pytest-timeout>=2.2.0", # Test timeout handling
    "respx>=0.20.0", # HTTP request mocking
    "sseclient-py>=1.8.0", # Server-Sent Events client for remote tests
    "bandit>=1.7.0", # Security linter
    "pip-audit>=2.7.0", # Dependency vulnerability checker
    "mypy>=1.0.0", # Static type checker
    "types-requests>=2.32.0", # Type stubs for requests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",                          # Verbose output
    "--strict-markers",            # Require marker registration
    "--tb=short",                  # Short traceback format
    "--cov=src/rootly_mcp_server", # Coverage for main package
    "--cov-report=term-missing",   # Show missing lines in coverage
    "--cov-report=xml",            # XML coverage for CI
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "remote: Remote server tests (require API token)",
    "slow: Tests that take longer to run",
    "security: Security-focused tests",
]
asyncio_mode = "auto"              # Auto-detect async tests
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "B904", # raise from None
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Unused imports in __init__.py

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"] # Use of assert detected (OK in tests)

[tool.black]
line-length = 100
target-version = ["py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
